coverage at least 80 procent